este es un commit al master en el que agregue ciertos estilos. agregue mas texto y tambien una cajita con css

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="contenido">
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
+        
+            <p>Hagase tu voluntad en la tierra como en el cielo danos hoy nuestro pan de cada dia</p>
+        </div>
 
     </body>
 </html>
