primer commit de mundoalterno

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div id="contenido">
+            <div id="mundoalterno">
+                mundoalterno
+            </div>
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
         
             <p>Hagase tu voluntad en la tierra como en el cielo danos hoy nuestro pan de cada dia</p>
