finalizado el mundo alterno con desing azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
     <body>
         <div id="contenido">
             <div id="mundoalterno">
-                mundoalterno
+                Blog de un intento de cristiano
+                <span id="tagline">tu blog de confianza</span>
             </div>
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
         
