--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
         
             <p>Hagase tu voluntad en la tierra como en el cielo danos hoy nuestro pan de cada dia</p>
+            <p>perdona nuestras ofensas como tambien nosotros perdonamos a los que nos ofenden, no nos dejes caer en tentacion y libranos del mal amen</p>
         </div>
 
     </body>
