modifique el color del texto y cambie cabecera por mundoalterno

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="contenido">
             <div id="mundoalterno">
                 Blog de un intento de cristiano
-                <span id="tagline">tu blog de confianza</span>
+                <span id="tagline">tu blog de mundoalterno</span>
             </div>
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
         
