agregue que se suscriban y den like. agregue principal en lugar de cabecera, tambien cambie las letras a azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,13 @@
         <div id="contenido">
             <div id="mundoalterno">
                 Blog de un intento de cristiano
-                <span id="tagline">tu blog de confianza</span>
+                <span id="tagline">tu blog de principal</span>
             </div>
         <h1>Padre nuestro que estas en el cielo, venga a nosotros tu reino</h1>
         
             <p>Hagase tu voluntad en la tierra como en el cielo danos hoy nuestro pan de cada dia</p>
             <p>perdona nuestras ofensas como tambien nosotros perdonamos a los que nos ofenden, no nos dejes caer en tentacion y libranos del mal amen</p>
+            <p>suscribete y dale like</p>
         </div>
 
     </body>
