--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jesus es rey</title>
+        <title>Jesus es rey y mi salvador</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
